--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   gap: ^3.0.1
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.2.0+3
+  flutter_svg: ^2.0.10+1
 
 
 
@@ -72,6 +73,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/icons/
     - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
