--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   gap: ^3.0.1
   google_fonts: ^6.2.1
   smooth_page_indicator: ^1.2.0+3
+  intl_phone_field: ^3.2.0
+  dropdown_button2: ^2.3.9
 
 
 
