--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   dropdown_button2: ^2.3.9
   flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.3.1
 
 
 
