--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl_phone_field: ^3.2.0
   dropdown_button2: ^2.3.9
   flutter_svg: ^2.0.10+1
+  get_storage: ^2.1.1
+  google_maps_place_picker_mb: ^3.1.2
 
 
 
