--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   get_storage: ^2.1.1
   google_maps_place_picker_mb: ^3.1.2
   cached_network_image: ^3.3.1
+  image_picker: ^1.1.2
 
 
 
