--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:label="mobilegarage"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyASCMQagE0IHqYPiniGuCf-_jh5XHlwMy8"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
