--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cached_network_image: ^3.3.1
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
+  flutter_otp_text_field: ^1.1.3+2
 
 
 
