--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
   flutter_otp_text_field: ^1.1.3+2
+  convex_bottom_bar: ^3.2.0
 
 
 
