--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
   flutter_otp_text_field: ^1.1.3+2
+  easy_stepper: ^0.8.5+1
+  timelines: ^0.1.0
 
 
 
