--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_switch: ^0.3.2
   convex_bottom_bar: ^3.2.0
   animated_snack_bar: ^0.4.0
+  carousel_slider: ^5.0.0
+  shimmer: ^3.0.0
 
 
 
