--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   animated_snack_bar: ^0.4.0
   carousel_slider: ^5.0.0
   shimmer: ^3.0.0
+  time_picker_spinner_pop_up: ^2.0.0
+  time: ^2.1.4
 
 
 
