--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,6 +45,8 @@ android {
         targetSdk = 33
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        multiDexEnabled true
+        
     }
 
     buildTypes {
