--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   flutter_advanced_switch: ^3.1.0
+  flutter_dotenv: ^5.1.0
+  flutter_stripe: ^9.5.0+1
+  http: ^1.2.2
 
 
 
@@ -80,6 +83,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  stripe_android: "9.5.0+1"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -106,6 +112,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/.env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
