--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.tritec.mobilegarage"
     compileSdk = 34
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = 23
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
