--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   time: ^2.1.4
   stepper_list_view: ^0.0.2
   dio: ^5.6.0
-  firebase_core: ^2.24.2
+  firebase_core: ^2.32.0
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   flutter_advanced_switch: ^3.1.0
@@ -80,6 +80,13 @@ dependencies:
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^17.2.4
   flutter_launcher_icons: ^0.14.1
+  pusher_channels_flutter: ^2.2.1
+  file_picker: ^8.1.3
+  full_screen_image: ^2.0.0
+  photo_view: ^0.15.0
+  flutter_pdfview: ^1.3.4
+  syncfusion_flutter_pdfviewer: ^27.1.57
+  flutter_file_downloader: ^2.0.0
 
 
 
