--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   flutter_pdfview: ^1.3.4
   syncfusion_flutter_pdfviewer: ^27.1.57
   flutter_file_downloader: ^2.0.0
+  is_first_run: ^1.0.0
 
 
 
