--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ dependencies:
   geocoding: ^3.0.0
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^17.2.4
-  flutter_launcher_icons: ^0.14.1
+  
   pusher_channels_flutter: ^2.2.1
   file_picker: ^8.1.3
   full_screen_image: ^2.0.0
@@ -102,7 +102,7 @@ dependency_overrides:
 flutter_icons:
   android: true
   ios: true
-  remove_alpha_channel_ios: true
+  remove_alpha_ios: true
   image_path : "assets/images/street_garage.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
