--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,6 @@ dependencies:
   geocoding: ^3.0.0
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^17.2.4
-  
   pusher_channels_flutter: ^2.2.1
   file_picker: ^8.1.3
   full_screen_image: ^2.0.0
@@ -88,6 +87,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^27.1.57
   flutter_file_downloader: ^2.0.0
   is_first_run: ^1.0.0
+  flutter_launcher_icons: ^0.14.1
 
 
 
@@ -99,12 +99,14 @@ dev_dependencies:
 dependency_overrides:
   stripe_android: "9.5.0+1"
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_ios: true
   image_path : "assets/images/street_garage.png"
-
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/street_garage.png"
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
