--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,9 +103,9 @@ flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path : "assets/images/street_garage.png"
+  image_path : "assets/images/garage_logo.jpg"
   adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/images/street_garage.png"
+  adaptive_icon_foreground: "assets/images/garage_logo.jpg"
   
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
