--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -24,6 +26,27 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Mobile Garage needs access to your camera for capturing and uploading images to update your profile picture.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Mobile Garage requires microphone access for recording voice messages and other audio content to share with users.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Mobile Garage needs access to your photo library for uploading images to update profile picture.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Mobile Garage needs access to your photo library to upload images for updating your profile pictures or to add photos for a post.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Mobile Garage needs access to location when sending your current location.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Mobile Garage needs access to location when in the background.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Mobile Garage needs access to location when open and in the background.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,9 +64,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 </dict>
 </plist>
