--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   flutter_file_downloader: ^2.0.0
   is_first_run: ^1.0.0
   flutter_launcher_icons: ^0.14.1
+  location: ^7.0.1
 
 
 
