--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,74 +28,67 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_snack_bar: ^0.4.0
+  another_stepper: ^1.2.2
+  cached_network_image: ^3.3.1
+  carousel_slider: ^5.0.0
+  cloud_firestore: ^4.14.0
+  convex_bottom_bar: ^3.2.0
+  cupertino_icons: ^1.0.6
+  dio: ^5.6.0
+  dotted_border: ^2.1.0
+  dropdown_button2: ^2.3.9
+  easy_stepper: ^0.8.5+1
+  file_picker: ^8.1.3
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.32.0
+  firebase_messaging: ^14.7.10
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  flutter_easyloading: ^3.0.5
-  get: ^4.6.6
-  geolocator: ^10.1.1
-  permission_handler: ^11.3.1
-  gap: ^3.0.1
-  google_fonts: ^6.2.1
-  smooth_page_indicator: ^1.2.0+3
-  intl_phone_field: ^3.2.0
-  dropdown_button2: ^2.3.9
-  flutter_svg: ^2.0.10+1
-  get_storage: ^2.1.1
-  google_maps_place_picker_mb: ^3.1.2
-  cached_network_image: ^3.3.1
-  dotted_border: ^2.1.0
-  image_picker: ^1.1.2
-  image_cropper: ^8.0.1
-  flutter_otp_text_field: ^1.1.3+2
-  timelines: ^0.1.0
-  pin_code_fields: ^8.0.1
-  url_launcher: ^6.3.0
-  flutter_rating_bar: ^4.0.1
-  table_calendar: ^3.1.2
-  flutter_switch: ^0.3.2
-  convex_bottom_bar: ^3.2.0
-  input_quantity: ^2.4.0
-  easy_stepper: ^0.8.5+1
-  another_stepper: ^1.2.2
-  animated_snack_bar: ^0.4.0
-  carousel_slider: ^5.0.0
-  shimmer: ^3.0.0
-  time_picker_spinner_pop_up: ^2.0.0
-  time: ^2.1.4
-  stepper_list_view: ^0.0.2
-  dio: ^5.6.0
-  firebase_core: ^2.32.0
-  firebase_auth: ^4.16.0
-  cloud_firestore: ^4.14.0
   flutter_advanced_switch: ^3.1.0
   flutter_dotenv: ^5.1.0
-  flutter_stripe: ^9.5.0+1
-  http: ^1.2.2
-  geocoding: ^3.0.0
-  firebase_messaging: ^14.7.10
-  flutter_local_notifications: ^17.2.4
-  pusher_channels_flutter: ^2.2.1
-  file_picker: ^8.1.3
-  full_screen_image: ^2.0.0
-  photo_view: ^0.15.0
-  flutter_pdfview: ^1.3.4
-  syncfusion_flutter_pdfviewer: ^27.1.57
-  flutter_file_downloader: ^2.0.0
-  is_first_run: ^1.0.0
-  flutter_launcher_icons: ^0.14.1
-  location: ^7.0.1
-
-
-
-
-  intl: any
-  google_maps_flutter: any
+  flutter_easyloading: ^3.0.5
   flutter_email_sender: ^6.0.3
+  flutter_file_downloader: ^2.0.0
+  flutter_launcher_icons: ^0.14.1
+  flutter_local_notifications: ^17.2.4
+  flutter_otp_text_field: ^1.1.3+2
+  flutter_pdfview: ^1.3.4
+  flutter_rating_bar: ^4.0.1
+  flutter_stripe: ^9.5.0+1
+  flutter_svg: ^2.0.10+1
+  flutter_switch: ^0.3.2
+  full_screen_image: ^2.0.0
+  gap: ^3.0.1
+  geocoding: ^3.0.0
+  geolocator: ^10.1.1
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  google_fonts: ^6.2.1
+  google_maps_flutter: any
+  google_maps_place_picker_mb: ^3.1.2
+  http: ^1.2.2
+  image_cropper: ^8.0.1
+  image_picker: ^1.1.2
+  input_quantity: ^2.4.0
+  intl: any
+  intl_phone_field: ^3.2.0
+  is_first_run: ^1.0.0
+  location: ^7.0.1
+  permission_handler: ^11.3.1
+  phone_numbers_parser: ^9.0.3
+  photo_view: ^0.15.0
+  pin_code_fields: ^8.0.1
+  pusher_channels_flutter: ^2.2.1
+  shimmer: ^3.0.0
+  smooth_page_indicator: ^1.2.0+3
+  stepper_list_view: ^0.0.2
+  syncfusion_flutter_pdfviewer: ^27.1.57
+  table_calendar: ^3.1.2
+  time: ^2.1.4
+  time_picker_spinner_pop_up: ^2.0.0
+  timelines: ^0.1.0
+  url_launcher: ^6.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -107,10 +100,10 @@ flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path : "assets/images/garage_logo.jpg"
+  image_path: "assets/images/garage_logo.jpg"
   adaptive_icon_background: "#FFFFFF"
   adaptive_icon_foreground: "assets/images/garage_logo.jpg"
-  
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -120,7 +113,6 @@ flutter_launcher_icons:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -139,10 +131,8 @@ flutter:
     - assets/.env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
