--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,11 @@ dependencies:
   phone_numbers_parser: ^9.0.3
   photo_view: ^0.15.0
   pin_code_fields: ^8.0.1
-  pusher_channels_flutter: ^2.2.1
+  # pusher_channels_flutter: ^2.2.1
+  pusher_channels_flutter:
+    git:
+      url: https://github.com/dola99/pusher-channels-flutter
+      ref: new_version
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.0+3
   stepper_list_view: ^0.0.2
